# myagents

./: .gitignore  AGENTS.md  Makefile  README.md  install.sh
.agents/plugins/: marketplace.json
.claude-desktop/: mcp.json
.claude-desktop/skills/agent-memory/: SKILL.md
.claude-desktop/skills/llm-council/: SKILL.md
.claude-desktop/skills/markitdown/: SKILL.md
.claude-desktop/skills/user-memory/: SKILL.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/workflows/: build.yml  validate.yml
plugins/albino/: .mcp.json
plugins/albino/.claude-plugin/: plugin.json
plugins/albino/.codex-plugin/: plugin.json
plugins/albino/.cursor-plugin/: plugin.json
plugins/albino/agents/: accessibility-reviewer.md  agents-md-reviewer.md  api-design-reviewer.md  architecture-reviewer.md  code-reviewer.md  humanizer.md  (+10 more)
plugins/albino/mcp-servers/agent-memory/: .gitignore  README.md  pyproject.toml
plugins/albino/mcp-servers/agent-memory/src/agent_memory/: __main__.py  db.py  embedding.py  memory_service.py  paths.py  quality.py  server.py  types.py
plugins/albino/mcp-servers/agent-memory/src/agent_memory/db/: __init__.py  _project_memories.py  _projects.py  _user_memories.py  _utils.py  agent_store.py
plugins/albino/mcp-servers/agent-memory/src/agent_memory/db/migrations/: 001_initial.sql  002_fingerprint.py  003_remove_fields.py
plugins/albino/mcp-servers/agent-memory/tests/: conftest.py  test_concurrency.py  test_db.py  test_embedding_failures.py  test_mcp_integration.py  test_memory_service.py  test_quality.py  test_vector_search.py
(+76 files in other folders)
